--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src="/node_modules/angular-animate/angular-animate.min.js"></script>
 		<script src="/js/app.js"></script>
 		<script src="/js/controllers.js"></script>
+        <script src="/js/services.js"></script>
 	</head>
 	<body>
 		<div id="persistent-menu">
